Corrected the bottom to btn

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
         <div id="todo-app">
             <h1>TO DO LIST</h1>
             <input type="text" id="task-input" placeholder="Enter a new task">
-            <button id="add-task-button">Add Task</button>
+            <button id="add-task-btn">Add Task</button>
             <ul id="task-list">
                 <!-- Tasks will be listed here-->
             </ul>
